Fri Feb  9 11:49:10 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Release 0.4.1

	* main.c (pwin_from_widget): Fix segfault with running accelerators
	on menus that have never been popped up by using
	gtk_menu_get_attach_widget() instead of ->parent_menu_shell.

Fri Feb  9 10:40:31 2001  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (dist-hook): Add some magic to make
	sure spec file always has an entry for the current
	version.

Fri Feb  9 10:13:43 2001  Owen Taylor  <otaylor@redhat.com>

	* memintercept.c: Handle __fork, __vfork, so that
	popen() is handled correctly. 

	* memintercept.c: Unset _MEMPROF_SOCKET when disabling
	tracing.

Sun Feb  4 14:01:45 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in (ALL_LINGUAS): Add pt_BR.

2001-01-23  Simos Xenitellis  <simos@hellug.gr>

	* configure.in: Added el to ALL_LINGUAS.

	* memprof.desktop: Added Greek translation. 

2000-11-07 Elliot Lee <sopwith@redhat.com>

	* process.c: Initialize variable to NULL to avoid some funky crash.

2000-10-31  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in: Added pl to ALL_LINGUAS.

2000-10-18  Christophe Merlet  <christophe@merlet.net>

	* memprof.desktop: Added French strings.

2000-10-14  Almer S. Tigelaar  <almer1@dds.nl>

	* configure.in: Add 'nl' to ALL_LINGUAS.

2000-10-11  Almer S. Tigelaar  <almer1@dds.nl>

	* memprof.glade: Add history id for the run dialog, this way
	previously run files will be remembered and don't have to be
	re-entered everytime.

	* memprof-strings.c: Fix the typo previously found by Kjartan
	Maraas on 2000-08-21 in the glade file.

2000-09-08  Szabolcs BAN <shooby@gnome.hu>

	* configure.in,po/hu.po: Added Hungarian translations from 
	Greg Nagy <greg@gnome.hu>

2000-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* memprof_strings.c: Fix typo.
	
2000-08-10  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in,po/ca.po: added Catalan file

2000-08-05  Martin Baulig  <baulig@suse.de>
